修改打包流程

--- a/packages/theme-chalk/package.json
+++ b/packages/theme-chalk/package.json
@@ -7,7 +7,7 @@
   "author": "",
   "main": "index.ts",
   "scripts": {
-    "build": "gulp",
+    "build1": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   }
 }
