--- a/packages/tokens/package.json
+++ b/packages/tokens/package.json
@@ -7,6 +7,7 @@
   "author": "",
   "main": "index.ts",
   "scripts": {
+    "build1": "gulp",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "peerDependencies": {
