--- a/packages/constants/package.json
+++ b/packages/constants/package.json
@@ -7,6 +7,6 @@
   "author": "",
   "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build1": "gulp"
   }
 }
