--- a/packages/hooks/package.json
+++ b/packages/hooks/package.json
@@ -7,7 +7,7 @@
   "author": "",
   "main": "index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build1": "gulp"
   },
   "peerDependencies": {
     "vue": "^3.2.0"
